--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -1,33 +1,63 @@
-<!-- Menu Button -->
 <button mat-mini-fab color="none" class="manu1" [matMenuTriggerFor]="belowMenu" (click)="toggleMenu()">
   <mat-icon color="primary">menu</mat-icon>
 </button>
-
-<!-- Mat Menu (empty) -->
-<mat-menu #belowMenu="matMenu" yPosition="below" class="bg-transparent" [hasBackdrop]="false"></mat-menu>
-
-<!-- Container for buttons -->
-<div class="buttons-container">
-  <!-- Button to toggle filter popup (conditionally rendered) -->
-  <button *ngIf="menuOpen" mat-mini-fab class="mycolor filter-toggle-button" title="Conventional Airways" (click)="toggleConventionalAirwaysLayer()">
-    <div class="icon-container">
-      <img src="assets/BlackAWY.png" title="Conventional Airways" style="height: 25px; width: 30px;" alt="Conventional Airways">
-    </div>
-  </button>
-
-  <!-- Button for Non-Conventional Airways -->
-  <button *ngIf="menuOpen" mat-mini-fab class="mycolor" title="Non-Conventional Airways" (click) = "toggleNonConventionalAirwaysLayer()">
-    <div class="icon-container">
-      <img src="assets/AWY.png" title="Non-Conventional Airways"  style="height: 25px; width: 30px;" alt="Non-Conventional Airways">
-    </div>
-  </button>
-
-  <!-- Icon button for Filter Data -->
-  <button mat-mini-fab color="primary" class="filter-icon" title="Filter Data" (click)="toggleFilterPopup()">
-    <mat-icon>filter_list</mat-icon>
-  </button>
-</div>
-
+ 
+<button mat-mini-fab color="none" class="filter-icon" title="Filter Data" (click)="toggleFilterPopup()" >
+  <mat-icon color="primary">filter_list</mat-icon>
+</button>
+<mat-menu #belowMenu="matMenu" yPosition="below" class="bg-transparent" [hasBackdrop]="false">
+  <div class="d-grid gap-2 col-6 mx-auto  justify-content-md-end">
+    <button mat-mini-fab class="mycolor" title="Conventional Airways">
+      <div class="icon-container"> <img src="assets/BlackAWY.png" title="Conventional Airways" (click)="loadConvData()"
+          style="height: 25px; width: 30px;" alt="Restricted_Airspace"> </div>
+    </button>
+ 
+    <button mat-mini-fab class="mycolor" title="Non-Conventional Airways" (click)="loadNonConvData()">
+      <div class="icon-container"> <img src="assets/AWY.png" title="Non-Conventional Airways"
+          style="height: 25px; width: 30px;" alt="Restricted_Airspace"> </div>
+    </button>
+    <button mat-mini-fab class="mycolor" title="FIR" >
+      <div class="icon-container">
+        <i class="bi bi-pentagon text-primary-emphasis" title="FIR"></i>
+      </div>
+    </button>
+ 
+    <button mat-mini-fab class="mycolor" title="Waypoint" (click)="toggleWaypoints()">
+      <div class="icon-container">
+        <mat-icon title="Waypoint" color="primary">change_history</mat-icon>
+      </div>
+    </button>
+ 
+    <button mat-mini-fab class="mycolor" title="Navaids" (click)="togglenavaids()">
+      <div class="icon-container">
+        <img src="assets/navaid.png" style="height: 100%; width: 60%;" title="Navaids" alt="Controlled Airspace">
+      </div>
+    </button>
+ 
+    <button mat-mini-fab class="mycolor" title="Controlled Airspace" (click)="toggleControlAirsapce()">
+      <div class="icon-container">
+        <img src="assets/CA.png" style="height: 100%; width: 60%; " title="Controlled Airspace"
+          alt="Controlled Airspace">
+      </div>
+    </button>
+ 
+    <button mat-mini-fab class="mycolor" title="Restricted Airspace" (click)="toggleRestrictedAirsapce()">
+      <div class="icon-container">
+        <img src="assets/Restricted_Airspace.png" title="Restricted Airspace" style="height: 25px; width: 25px;"
+          alt="Restricted Airspace">
+      </div>
+    </button>
+ 
+    <button mat-mini-fab class="mycolor" title="Aerodrome Obstacle" (click)="toggleAerodromeObstacle()">
+      <div class="icon-container">
+        <img src="assets/Lighted_Obstacle.png" title="Aerodrome Obstacle" style="height: 80%;  width: 50px; "
+          alt="Aerodrome Obstacle">
+      </div>
+    </button>
+ 
+  </div>
+</mat-menu>
+ 
 <!-- Filter Popup -->
 <div *ngIf="filterPopupVisible && menuOpen" id="filter-popup" class="filter-popup">
   <h3>Filter By</h3>
@@ -66,17 +96,18 @@
         <input type="text" id="lateral_limits" #lateralLimitsInput>
       </div>
     </div>
-    <button type="button" class="buttons" (click)="filterAndShowFeatures(typeInput.value, trackMagneticInput.value, airwayIdInput.value, upperLimitInput.value, lowerLimitInput.value, meaInput.value, lateralLimitsInput.value)">Apply</button>
+    <button type="button" class="buttons"
+      (click)="filterAndShowFeatures(typeInput.value, trackMagneticInput.value, airwayIdInput.value, upperLimitInput.value, lowerLimitInput.value, meaInput.value, lateralLimitsInput.value)">Apply</button>
   </form>
 </div>
-
-
-
+ 
+ 
+ 
 <!-- Popup for feature information -->
 <div id="popup" class="ol-popup">
   <a href="#" id="popup-closer" class="ol-popup-closer" (click)="closePopup($event)"></a>
   <div id="popup-content"></div>
 </div>
-
+ 
 <!-- Map Container -->
 <div id="map" class="map"></div>
