--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -234,25 +234,6 @@
                             <mat-icon title="Open Navigation Toolbar">keyboard_arrow_down</mat-icon>
                         </div>
                     </button>
-
-                    <div class="butoom-center-button " title="Cognitive navigation Pvt.Ltd">
-
-                        <!-- <div class="container-fluid">
-                            <a class="" href="https://www.cognitivenavigation.com" title="Cognitive navigation Pvt.Ltd">
-                                <img src="https://www.cognitivenavigation.com/wp-content/uploads/2024/03/cropped-C_Name.png"
-                                    alt="Cognitive navigation Pvt.Ltd" title="Cognitive navigation Pvt.Ltd" width="50"
-                                    height="40" class="d-inline-block align-text-top">
-                            </a>
-                        </div> -->
-
-                        <small title="Cognitive navigation Pvt.Ltd" color="primary">Cognitive Navigation
-                        </small>
-
-                    </div>
-
-
-
-
                     <!-- your-component.component.html -->
                     <div class="top-right-buttons">
                         <select class="form-select form-select-sm" aria-label="Default select example">
@@ -375,7 +356,7 @@
                         </div>
                     </button> -->
                     <!-- Other buttons -->
-                    <div id="map" style="height: 100vh;"></div>
+                    <div id="map" style="height: 100vh; width:100%;"></div>
                 </div>
             </div>
         </mat-sidenav-content>
