--- a/src/app/leaflet-map/leaflet-map.component.html
+++ b/src/app/leaflet-map/leaflet-map.component.html
@@ -23,195 +23,124 @@
             alt="Non-Conventional Airways">
         </div>
       </button>
-  
       <button mat-mini-fab class="mycolor" title="FIR">
         <div class="icon-container">
           <i class="bi bi-pentagon text-primary-emphasis" title="FIR"></i>
         </div>
       </button>
-  
       <button mat-mini-fab class="mycolor" title="Waypoint" (click)="toggleWaypoints($event)" >
         <div class="icon-container">
           <mat-icon title="Waypoint" color="primary">change_history</mat-icon>
         </div>
       </button>
   
-      <button mat-mini-fab class="mycolor" title="Navaids" (click)="togglenavaids($event)" >
-        <div class="icon-container">
-          <img src="assets/navaid.png" style="height: 100%; width: 60%;" title="Navaids" alt="Navaids">
-        </div>
-      </button>
-  
-      <button mat-mini-fab class="mycolor" title="Controlled Airspace" (click)="toggleControlAirsapce($event)" >
-        <div class="icon-container">
-          <img src="assets/CA.png" style="height: 100%; width: 60%;" title="Controlled Airspace"
-            alt="Controlled Airspace">
-        </div>
-      </button>
-  
-      <button mat-mini-fab class="mycolor" title="Restricted Airspace" (click)="toggleRestrictedAirsapce($event)">
-        <div class="icon-container">
-          <img src="assets/Restricted_Airspace.png" title="Restricted Airspace" style="height: 25px; width: 25px;"
-            alt="Restricted Airspace">
-        </div>
-      </button>
-  
-      <button mat-mini-fab class="mycolor" title="Aerodrome Obstacle" >
+      
+     
+      <button mat-mini-fab class="mycolor" title="Aerodrome Obstacle" (click)="toggleAerodromeAirspace($event)">
         <div class="icon-container">
           <img src="assets/Lighted_Obstacle.png" title="Aerodrome Obstacle" style="height: 80%; width: 50px;"
             alt="Aerodrome Obstacle">
         </div>
       </button>
+      
     </div>
   </mat-menu>
-  
+   
+   
+ 
   <!-- Filter Popup -->
 <div *ngIf="filterPopupVisible" id="filter-popup" class="filter-popup">
     <h3>Filter By</h3>
     <a href="#" id="filter-popup-closer" class="filter-popup-closer" (click)="closeFilterPopup($event)" >×</a>
      
-  
-    <form>
-      <div class="form-group">
-        <label for="type">Type:</label>
-        <select id="type" [(ngModel)]="selectedType" name="type">
-          <option value="conv">Conventional Airways</option>
-          <option value="nonconv">Non-Conventional Airways</option>
-          <option value="Waypoint">Waypoint</option>
-          <option value="Navaids">Navaids</option>
-          <option value="ControlAirspace">Control Airspace</option>
-          <option value="RestrictedAirspace">Restricted Airspace</option>
-          <option value="AerodromeObstacle">Aerodrome Obstacle</option>
-        </select>
-      </div>
    
+    <form>
       <!-- Fields for Conventional Airways -->
-      <div *ngIf="selectedType === 'conv'">
+      <div *ngIf="selectedType === 'Conv'">
         <div class="form-group">
-          <label for="track_magnetic">Track Magnetic:</label>
-          <input type="text" id="track_magnetic" #trackMagneticInput>
+          <label for="airway_id_conv">Airway ID:</label>
+          <input type="text" id="airway_id_conv" #airwayIdInput>
         </div>
+        
         <div class="form-group">
-          <label for="airway_id">Airway ID:</label>
-          <input type="text" id="airway_id" #airwayIdInput>
+          <label for="upper_limit_conv">Upper Limit:</label>
+          <input type="text" id="upper_limit_conv" #upperLimitInput>
         </div>
+        
         <div class="form-group">
-          <label for="upper_limit">Upper Limit:</label>
-          <input type="text" id="upper_limit" #upperLimitInput>
+          <label for="lower_limit_conv">Lower Limit:</label>
+          <input type="text" id="lower_limit_conv" #lowerLimitInput>
         </div>
+        
         <div class="form-group">
-          <label for="lower_limit">Lower Limit:</label>
-          <input type="text" id="lower_limit" #lowerLimitInput>
-        </div>
+              <label for="airspace_nonconv">Airspace:</label>
+              <select id="airspace_nonconv" #airspaceInput>
+                <option value="" disabled selected>Select an airspace</option>
+                <option *ngFor="let airspace of airspaceOptions" [value]="airspace">{{ airspace }}</option>
+              </select>
+            </div>
+        
         <div class="form-group">
-          <label for="mea">MEA:</label>
-          <input type="text" id="mea" #meaInput>
+          <label for="mea_conv">MEA (FT):</label>
+          <input type="text" id="mea_conv" #meaInput>
         </div>
-        <div class="form-group">
-          <label for="lateral_limits">Lateral Limits:</label>
-          <input type="text" id="lateral_limits" #lateralLimitsInput>
-        </div>
-        <button type="button" class="buttons">Apply</button>
+        
+        <button type="button" class="buttons" 
+          (click)="applyConvFilter(
+            airwayIdInput.value,
+            upperLimitInput.value, 
+            lowerLimitInput.value, 
+            airspaceInput.value,
+            meaInput.value
+          )">
+          Apply
+        </button>
       </div>
-  
-      <!-- Fields for nonConventional Airways -->
-      <div *ngIf="selectedType === 'nonconv'">
+      
+      <!-- Fields for Non-Conventional Airways -->
+      <div *ngIf="selectedType === 'Non Conv'">
         <div class="form-group">
-          <label for="track_magnetic">Track Magnetic:</label>
-          <input type="text" id="track_magnetic" #trackMagneticInput>
+          <label for="airway_id_nonconv">Airway ID:</label>
+          <input type="text" id="airway_id_nonconv" #airwayIdInputNonConv>
         </div>
+        
         <div class="form-group">
-          <label for="airway_id">Airway ID:</label>
-          <input type="text" id="airway_id" #airwayIdInput>
+          <label for="upper_limit_nonconv">Upper Limit:</label>
+          <input type="text" id="upper_limit_nonconv" #upperLimitInputNonConv>
         </div>
+        
         <div class="form-group">
-          <label for="upper_limit">Upper Limit:</label>
-          <input type="text" id="upper_limit" #upperLimitInput>
+          <label for="lower_limit_nonconv">Lower Limit:</label>
+          <input type="text" id="lower_limit_nonconv" #lowerLimitInputNonConv>
         </div>
+        
         <div class="form-group">
-          <label for="lower_limit">Lower Limit:</label>
-          <input type="text" id="lower_limit" #lowerLimitInput>
-        </div>
+              <label for="airspace_nonconv">Airspace:</label>
+              <select id="airspace_nonconv" #airspaceInputNonConv>
+                <option value="" disabled selected>Select an airspace</option>
+                <option *ngFor="let airspace of airspaceOptions" [value]="airspace">{{ airspace }}</option>
+              </select>
+            </div>
+        
         <div class="form-group">
-          <label for="mea">MEA:</label>
-          <input type="text" id="mea" #meaInput>
+          <label for="mea_nonconv">MEA (FT):</label>
+          <input type="text" id="mea_nonconv" #meaInputNonConv>
         </div>
-        <div class="form-group">
-          <label for="lateral_limits">Lateral Limits:</label>
-          <input type="text" id="lateral_limits" #lateralLimitsInput>
-        </div>
-        <button type="button" class="buttons"
-          >Apply</button>
+        
+        <button type="button" class="buttons" 
+          (click)="applyNonConvFilter(
+            airwayIdInputNonConv.value, 
+            upperLimitInputNonConv.value, 
+            lowerLimitInputNonConv.value, 
+            airspaceInputNonConv.value,
+            meaInputNonConv.value
+          )">
+          Apply
+        </button>
       </div>
-  
-      <!--  Fields for Waypoint -->
-      <div *ngIf="selectedType === 'Waypoint'">
-        <div class="form-group">
-          <label for="id">ID:</label>
-          <input type="text" id="id" #idInput>
-        </div>
-        <div class="form-group">
-          <label for="waypoints">Waypoints:</label>
-          <input type="text" id="wayPoints" #waypointsInput>
-        </div>
-        <div class="form-group">
-          <label for="name_of_routes">Name Of Routes:</label>
-          <input type="text" id="name_of_routes" #routeNameInput>
-        </div>
-        <button type="button" class="buttons">Apply</button>
-      </div>
-  
-      <!--  Fields for novaid -->
-      <div *ngIf="selectedType === 'Navaids'">
-        <div class="form-group">
-          <label for="id">ID:</label>
-          <input type="text" id="id" #idInput>
-        </div>
-        <div class="form-group">
-          <label for="airport_icao">Airport ICAO:</label>
-          <input type="text" id="airport_icao" #airportICAOInput>
-        </div>
-        <div class="form-group">
-          <label for="navaid_information">Navaid Information:</label>
-          <input type="text" id="navaid_information" #navaidInfoInput>
-        </div>
-        <button type="button" class="buttons">Apply</button>
-      </div>
-  
-      <!--  Fields for ControlAirspace -->
-      <div *ngIf="selectedType === 'ControlAirspace'">
-        <div class="form-group">
-          <label for="id">ID:</label>
-          <input type="text" id="id" #idInput>
-        </div>
-        <div class="form-group">
-          <label for="AirspaceCenter">Airspace Center:</label>
-          <input type="text" id="AirspaceCenter" #airspaceCenterInput>
-        </div>
-        <div class="form-group">
-          <label for="ControlledAirspaceName">Controlled Airspace Name:</label>
-          <input type="text" id="ControlledAirspaceName" #airspaceNameInput>
-        </div>
-        <button type="button" class="buttons">Apply</button>
-      </div>
-  
-      <!--  Fields for RestrictedAirspace -->
-      <div *ngIf="selectedType === 'RestrictedAirspace'">
-        <div class="form-group">
-          <label for="id">ID:</label>
-          <input type="text" id="id" #idInput>
-        </div>
-        <div class="form-group">
-          <label for="RestrictedAirspaceName">Restricted Airspace Name:</label>
-          <input type="text" id="RestrictedAirspaceName" #restrictedAirspaceNameInput>
-        </div>
-        <div class="form-group">
-          <label for="upper_limit">Upper Limit:</label>
-          <input type="text" id="upper_limit" #upperLimitInput>
-        </div>
-        <button type="button" class="buttons">Apply</button>
-      </div>
+      
     </form>
+    
   </div>
 
   <div id="popup" class="ol-popup">
@@ -219,5 +148,5 @@
     <div id="popup-content"></div>
   </div>
 
-<div id="map" class="map-container"></div>
-  
+  <div id="map" style="height: 100vh; width: 100%;"></div>
+ 
