--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -343,7 +343,7 @@
 
                     <div id="map" style="height: 100vh; width:100%; position: relative;">
 
-                        <!-- Filter Form for Conv Line Data -->
+                       
                         <!-- Filter Form for Conventional Line Data -->
                         <div id="convFilterPopup" *ngIf="activeLayer === 'convlinedata' && filterPopupVisible"
                             class="filter-popup">
@@ -353,39 +353,53 @@
                                 <input type="text" id="airwayIdInput" placeholder="Enter Airway ID">
 
                                 <label for="upperLimitInput">Upper Limit (FL):</label>
-                                <input type="text" id="upperLimitInput" placeholder="Enter Upper Limit Ex: 460">
+                                <input type="text" id="upperLimitInput" placeholder="Enter Upper Limit">
+
+                                <label for="lowerLimitInput">Lower Limit (FL):</label>
+                                <input type="text" id="lowerLimitInput" placeholder="Enter Lower Limit">
+
+                                <label for="meaInput">MEA:</label>
+                                <input type="text" id="meaInput" placeholder="Enter MEA">
+
+                                <label for="airspaceInput">Airspace:</label>
+                                <select id="airspaceInput">
+                                    <option value="" disabled selected>Select an airspace</option>
+                                    <option *ngFor="let option of airspaceOptions" [value]="option">{{ option }}
+                                    </option>
+                                </select>
 
                                 <button type="submit">Apply Filter</button>
                             </form>
                         </div>
 
                         <!-- Filter Form for Non-Conventional Line Data -->
-                        <div id="nonConvFilterPopup" *ngIf="activeLayer === 'nonconvlinedata' && filterPopupVisible"
-                            class="filter-popup">
+                        <div id="nonConvFilterPopup" *ngIf="activeLayer === 'nonconvlinedata' && filterPopupVisible" class="filter-popup">
                             <h3>Non-Conventional Line Data Filter</h3>
                             <form (submit)="applyNonConvFilter($event)">
                                 <label for="nonairwayIdInput">Airway ID:</label>
                                 <input type="text" id="nonairwayIdInput" placeholder="Enter Airway ID">
 
-                                <label for="nonUpperLimitInput">Upper Limit (FL):</label>
-                                <input type="text" id="nonUpperLimitInput" placeholder="Enter Upper Limit Ex: 460">
+                                <label for="nonupperLimitInput">Upper Limit (FL):</label>
+                                <input type="text" id="nonupperLimitInput" placeholder="Enter Upper Limit">
+
+                                <label for="nonlowerLimitInput">Lower Limit (FL):</label>
+                                <input type="text" id="nonlowerLimitInput" placeholder="Enter Lower Limit">
+
+                                <label for="nonmeaInput">MEA:</label>
+                                <input type="text" id="nonmeaInput" placeholder="Enter MEA">
+
+                                <label for="nonairspaceInput">Airspace:</label>
+                                <select id="nonairspaceInput">
+                                    <option value="" disabled selected>Select an airspace</option>
+                                    <option *ngFor="let option of airspaceOptions" [value]="option">{{ option }}
+                                    </option>
+                                </select>
+
 
                                 <button type="submit">Apply Filter</button>
                             </form>
                         </div>
-
-
-
-                        <!-- Filter Form for Non-Conv Line Data -->
-
-
-
-                        <!-- The filters will show automatically based on the active layer -->
-
-
-
-
-
+                     
                     </div>
                 </div>
                 <div>
